--- a/WebApplication2/index.html
+++ b/WebApplication2/index.html
@@ -90,85 +90,7 @@
     <button onclick="goToQuiz()">Gå til Quiz</button>
 </div>
 
-<script>
-    async function sendTestRequest() {
-        const sendButton = document.getElementById('sendButton');
-        sendButton.disabled = true;
-        sendButton.classList.add('loading');
-        sendButton.textContent = 'Sender...';
+<script src="./scripts/script.js"></script>
 
-        const niveau = document.getElementById('niveau').value;
-        const laengde = document.getElementById('laengde').value;
-        const fokusomraader = document.getElementById('fokusomraader').value;
-        const hovedpersonen = document.getElementById('hovedpersonen').value;
-        const vejrEllerSaeson = document.getElementById('vejrEllerSaeson').value;
-        const lokation = document.getElementById('lokation').value;
-        const kulturelleElementer = document.getElementById('kulturelleElementer').value;
-        const personligeTraek = document.getElementById('personligeTraek').value;
-        const laeserensNavn = document.getElementById('laeserensNavn').value;
-        const magiEllerSuperkraefter = document.getElementById('magiEllerSuperkraefter').value;
-        const karakterensKaeldyr = document.getElementById('karakterensKaeldyr').value;
-
-        const prompt = `You are tasked with writing a children's text in Danish. Follow these instructions carefully to create an appropriate text:
-
-1. Writing Level: The text should be written at a ${niveau} level, measured on a scale from 0 to 10.
-
-2. Text Length: The text should be ${laengde} characters long, including spaces.
-
-3. Focus Areas: ${fokusomraader}
-
-4. Main Character Name: The main character's name should be ${hovedpersonen}.
-
-5. Season or Weather: ${vejrEllerSaeson}
-
-6. Location Details: ${lokation}
-
-7. Cultural Elements: ${kulturelleElementer}
-
-8. Personal Traits: ${personligeTraek}
-
-9. Reader's Name: ${laeserensNavn}
-
-10. Magic or Superpowers: ${magiEllerSuperkraefter}
-
-11. Character Pets: ${karakterensKaeldyr}`;
-
-        try {
-            const response = await fetch('http://localhost:5001/send-to-claude', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ prompt })
-            });
-
-            if (!response.ok) {
-                throw new Error('Netværksrespons var ikke ok');
-            }
-
-            const data = await response.json();
-            document.getElementById('inputContainer').classList.add('hidden');
-            const responseBox = document.getElementById('responseBox');
-            responseBox.classList.remove('hidden');
-            responseBox.innerHTML = '<h3>Claude Resultat:</h3><p>' + (data.response.completion || 'Ingen svar modtaget fra Claude') + '</p>' + responseBox.innerHTML;
-        } catch (error) {
-            console.error('Fejl ved kald til Claude:', error);
-            alert('Der opstod en fejl ved kald til Claude API. Prøv igen senere.');
-        } finally {
-            sendButton.disabled = false;
-            sendButton.classList.remove('loading');
-            sendButton.textContent = 'Send til Claude';
-        }
-    }
-
-    function showInputFields() {
-        document.getElementById('inputContainer').classList.remove('hidden');
-        document.getElementById('responseBox').classList.add('hidden');
-    }
-
-    function goToQuiz() {
-        alert('Quiz-funktionalitet er under udvikling.');
-    }
-</script>
 </body>
 </html>
