--- a/WebApplication2/index.html
+++ b/WebApplication2/index.html
@@ -91,7 +91,8 @@
    
 </div>
 
-<script src="./scripts/script.js"></script>
+<script src="./scripts/script.js?v=1.0.1"></script>
+
 
 </body>
 </html>
