--- a/WebApplication2/public/generate_questions.html
+++ b/WebApplication2/public/generate_questions.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Quiz</title>
     <style>
         * {
@@ -133,19 +133,20 @@
             border-radius: 6px;
             margin-bottom: 1rem;
         }
-        <style>
-             /* Behold alle eksisterende styles fra index.html */
 
-             /* Tilføj nye styles for score visning */
-         .score-display {
-             font-size: 1.2rem;
-             color: #374151;
-             margin: 1rem 0;
-             padding: 1rem;
-             background-color: #f3f4f6;
-             border-radius: 8px;
-             text-align: center;
-         }
+        <
+        style >
+            /* Behold alle eksisterende styles fra index.html */
+            /* Tilføj nye styles for score visning */
+        .score-display {
+            font-size: 1.2rem;
+            color: #374151;
+            margin: 1rem 0;
+            padding: 1rem;
+            background-color: #f3f4f6;
+            border-radius: 8px;
+            text-align: center;
+        }
 
         .result-section {
             margin-top: 2rem;
@@ -184,7 +185,7 @@
 
     <div id="questionsContent"></div>
 
-    <button class="check-button" onclick="checkAnswers()" id="checkButton">Tjek svar</button>
+    <button class="check-button" id="checkButton" onclick="checkAnswers()">Tjek svar</button>
 
     <div class="story-section">
         <h2>Original Historie:</h2>
@@ -197,7 +198,7 @@
     let selectedAnswers = new Map();
     let totalScore = 0; // Global score variabel
 
-    document.addEventListener('DOMContentLoaded', async function() {
+    document.addEventListener('DOMContentLoaded', async function () {
         const story = localStorage.getItem('generatedStory');
         if (!story) {
             alert('Ingen historie fundet. Generer venligst en historie først.');
@@ -213,7 +214,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({ text: story })
+                body: JSON.stringify({text: story})
             });
 
             if (!response.ok) {
