changed name for intro text

--- a/WebApplication2/public/index2.html
+++ b/WebApplication2/public/index2.html
@@ -233,7 +233,7 @@
             <input type="text" id="recipientName" class="input" required>
         </div>
         <div class="input-group">
-            <label class="label">Custom Hero Text (optional)</label>
+            <label class="label">Custom Intro Text (optional)</label>
             <input type="text" id="heroTextInput" class="input" placeholder="Here are the topics we've selected for your onboarding:">
         </div>
         <div class="checkbox-group">
