Changed summary button

--- a/WebApplication2/public/index2.html
+++ b/WebApplication2/public/index2.html
@@ -221,7 +221,7 @@
 <div class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-        <h1 class="hero-title">Create Onboarding Summary</h1>
+        <h1 class="hero-title">Create Onboarding Summary Page</h1>
         <p class="hero-text">Select topics and resources for personalized onboarding experience</p>
     </div>
 </div>
@@ -280,7 +280,7 @@
 
 
         <button type="submit" class="button">
-            Generate Summary
+            Generate Onboarding Page
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M5 12h14m-7-7l7 7-7 7"/>
             </svg>
