--- a/WebApplication2/public/index2.html
+++ b/WebApplication2/public/index2.html
@@ -234,7 +234,7 @@
         </div>
         <div class="input-group">
             <label class="label">Custom Intro Text (optional)</label>
-            <input type="text" id="heroTextInput" class="input" placeholder="Here are the topics we've selected for your onboarding:">
+            <input type="text" id="heroTextInput" class="input" placeholder="Here are the topics we discussed during our onboarding meeting. I hope this summary helps make your journey smooth and enjoyable. It captures everything we talked about to ensure you feel confident as you get started. Please take your time to review these points, and know that I'm always here to support you as you embark on this new experience.">
         </div>
         <div class="checkbox-group">
             <input type="checkbox" class="checkbox" id="topic6" value="AIIntegration">
