--- a/WebApplication2/public/index2.html
+++ b/WebApplication2/public/index2.html
@@ -293,7 +293,7 @@
         <!-- Main Heading and Description -->
         <div class="summary-header">
             <h2>Hi <span id="recipientNameDisplay"></span>,</h2>
-            <p class="hero-text">Here are the topics we've selected for your onboarding:</p>
+            <p class="hero-text">Here are the topics we discussed during our onboarding meeting. I hope this summary helps make your journey smooth and enjoyable. It captures everything we talked about to ensure you feel confident as you get started. Please take your time to review these points, and know that I'm always here to support you as you embark on this new experience.</p>
         </div>
 
         <!-- Cards Container -->
