--- a/WebApplication2/public/index3.html
+++ b/WebApplication2/public/index3.html
@@ -13,8 +13,7 @@
 </div>
 <div class="section">
     <div class="section-header">
-        <div class="section-icon" data-tooltip="ROI: Clear journey visualization reduces follow-up emails by 40%. Transparent onboarding timeline increases client engagement and reduces time-to-value. Customer Success teams save 10+ hours per week on status updates and coordination.">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <div class="section-icon" data-tooltip="A clear journey visualization could help both customers and internal teams better understand progress and next steps. Through tracking customer interactions across Unity Editor usage, asset downloads, and documentation access, teams could proactively identify engagement patterns. Automated milestone tracking could help identify at-risk customers earlier and might provide opportunities for proactive engagement.">            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
             </svg>
         </div>
@@ -43,40 +42,40 @@
 </div>
 <div class="section">
     <div class="section-header">
-        <div class="section-icon" data-tooltip="ROI: Structured onboarding process increases successful customer onboarding by 65%. PRM guidance reduces time-to-value by 45% and increases early adoption rates.">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <div class="section-icon" data-tooltip="Clear task visualization with expected outcomes could drive higher customer engagement and adoption. By presenting customers with personalized next steps based on their Unity usage patterns, we could create a more guided journey. Each task's business value and time investment could be clearly communicated, potentially helping customers prioritize their learning path and see immediate value from their Unity investment.">        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
             </svg>
         </div>
-        <h2>Test1</h2>
+        <h2>Tasks</h2>
     </div>
 
 <div class="card-grid">
-    <div class="card">
-        <h3>3 MONTHS ONBOARDING & PRM</h3>
-        <p>Your Partner Relations Manager will help guide you with relevant articles and Unity features to create your next Unity projects.</p>
-        <a href="#" class="button">Contact PRM</a>
-    </div>
+   
     <div class="card">
         <h3>PRODUCT ACTIVATION</h3>
         <p>Technical support through product activation with documentation, training videos and advice to start your Unity Journey.</p>
-        <a href="#" class="button">Start Activation</a>
+        <a href="#" class="button completed">Completed</a>
+    </div>
+    <div class="card">
+
+        <h3>3 MONTHS ONBOARDING & PRM</h3>
+        <p>Your Partner Relations Manager will help guide you with relevant articles and Unity features to create your next Unity projects.</p>
+        <a href="#" class="button completed">Completed</a>
     </div>
     <div class="card">
         <h3>TECHNICAL SUPPORT</h3>
         <p>Access expert guidance, best practices, and comprehensive issue resolution support.</p>
-        <a href="#" class="button">Get Help</a>
+        <a href="#" class="button">Learn how to submit a ticket</a>
     </div>
 </div>
 </div>
 <div class="section">
     <div class="section-header">
-        <div class="section-icon" data-tooltip="ROI: Centralized tool access increases product adoption by 25%. Customers report 30% faster implementation times. Annual efficiency savings of $500K.">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <div class="section-icon" data-tooltip="A centralized service overview could provide instant clarity on available subscription benefits, replacing lengthy email communications. By showcasing tools, features, and access rights specific to the customer's subscription level, teams could reduce confusion about entitlements. The dedicated Partner Relations Manager could guide customers through their available services, potentially leading to higher feature adoption and return on investment.">            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
             </svg>
         </div>
-        <h2>Test2</h2>
+        <h2>Overview of Services fo Unity Industry</h2>
     </div>
     <div class="card-grid">
         <div class="card">
@@ -95,6 +94,11 @@
             <a href="#" class="button">Learn More</a>
         </div>
         <div class="card">
+            <h3>Partner Relation Manager</h3>
+            <p>Your Unity PRM is your internal advocate, strategic advisor, and bridge to Unity, who works with you to take issues from submission to resolution. They maintain clear lines of communication to keep you informed and productive.</p>
+            <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="card">
             <h3>HAVOK PHYSICS</h3>
             <p>Raises the bar of your physics implementation with seamless integration for ECS-based projects.</p>
             <a href="#" class="button">Learn More</a>
@@ -102,6 +106,11 @@
         <div class="card">
             <h3>SOURCE CODE ACCESS</h3>
             <p>Get greater insight into Unity's inner workings with read-only source code access.</p>
+            <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="card">
+            <h3>On Demand Training</h3>
+            <p>Explore self-paced courses and tutorials focused on real-time 3D development, from beginner fundamentals to advanced techniques.</p>
             <a href="#" class="button">Learn More</a>
         </div>
     </div>
@@ -116,47 +125,44 @@
                 <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
             </svg>
         </div>
-        <h2>Test3</h2>
+        <h2>Last Meeting Following Actions</h2>
     </div>
     <div class="meeting-grid">
         <div class="meeting-card">
             <div class="meeting-icon">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M12 8v4l3 3"/>
-                    <circle cx="12" cy="12" r="10"/>
+                    <path d="M12 8v4l3 3"></path>
+                    <circle cx="12" cy="12" r="10"></circle>
                 </svg>
             </div>
             <div class="meeting-content">
-                <div class="meeting-date">December 15, 2023</div>
-                <h3>Initial Onboarding</h3>
-                <p>Discussed project requirements and setup timeline. Identified key technical needs.</p>
+                <div class="meeting-date">UI Toolkit Resources</div>
+                <p>Access comprehensive UI Toolkit documentation and starter templates. Begin with basic layouts and controls for your Unity project.</p>
             </div>
         </div>
 
         <div class="meeting-card">
             <div class="meeting-icon">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M8 6h13M8 12h13M8 18h13M3 6h.01M3 12h.01M3 18h.01"/>
+                    <path d="M3 12h18M3 6h18M3 18h18"></path>
                 </svg>
             </div>
             <div class="meeting-content">
-                <div class="meeting-date">December 18, 2023</div>
-                <h3>Action Items</h3>
-                <p>Complete technical contact form, schedule product activation call, review documentation.</p>
+                <div class="meeting-date">XR Development Course</div>
+                <p>Enroll in Unity's XR development course to learn core concepts, best practices, and hands-on application building techniques.</p>
             </div>
         </div>
 
         <div class="meeting-card">
             <div class="meeting-icon">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="12" r="10"/>
-                    <path d="M12 16v-4M12 8h.01"/>
+                    <circle cx="12" cy="12" r="10"></circle>
+                    <path d="M12 16v-4M12 8h.01"></path>
                 </svg>
             </div>
             <div class="meeting-content">
-                <div class="meeting-date">Next Steps</div>
-                <h3>Upcoming Activities</h3>
-                <p>Technical setup review scheduled for next week. Prepare development environment.</p>
+                <div class="meeting-date">Support Channel Setup</div>
+                <p>Configure your technical support channels and get familiar with Unity's issue tracking system for efficient problem resolution.</p>
             </div>
         </div>
     </div>
@@ -170,7 +176,7 @@
                 <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
             </svg>
         </div>
-        <h2>Featured Projects</h2>
+        <h2>Inspirational Use Cases</h2>
     </div>
 
     <!-- Carousel container with adjusted width -->
@@ -184,26 +190,26 @@
         <div class="carousel-track">
             <div class="carousel-slides">
                 <div class="carousel-slide">
-                    <div class="card">
-                        <img src="images/Mazda1.jpg" alt="Project 1" class="card-image">
-                        <h3>Mixed reality surgical training</h3>
-                        <p>VirtaMed LaparoS uses Unity's real-time 3D technology for hyperrealistic surgical training.</p>
+                    <div class="carousel-card">
+                        <img src="images/Mazda.jpg" alt="Mazda and Unity Partnership" class="card-image">
+                        <h3>Mazda and Unity: Pioneering a new future for automotive cockpit HMI</h3>
+                        <p>Join us in exploring Mazda's collaboration with Unity to shape the future of automotive cockpit HMI. Gain insights from Seiji Goto, Mazda's General Manager of Infotainment and Control Model Development Department.</p>
                         <a href="#" class="button">VIEW POST</a>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <div class="card">
-                        <img src="images/Mazda1.jpg" alt="Project 1" class="card-image">
-                        <h3>Mixed reality surgical training</h3>
-                        <p>VirtaMed LaparoS uses Unity's real-time 3D technology for hyperrealistic surgical training.</p>
+                    <div class="carousel-card">
+                        <img src="images/Don.jpg" alt="Don Julio VR Experience" class="card-image">
+                        <h3>Creating Tequila Don Julio's immersive app on Apple Vision Pro</h3>
+                        <p>Discover how Trigger XR, an experienced XR developer and agency, built Tequila Don Julio's immersive app on Apple Vision Pro.</p>
                         <a href="#" class="button">VIEW POST</a>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <div class="card">
-                        <img src="images/Mazda1.jpg" alt="Project 1" class="card-image">
-                        <h3>Mixed reality surgical training</h3>
-                        <p>VirtaMed LaparoS uses Unity's real-time 3D technology for hyperrealistic surgical training.</p>
+                    <div class="carousel-card">
+                        <img src="images/MR.jpg" alt="VirtaMed Medical Training" class="card-image">
+                        <h3>Mixed reality surgical training with the VirtaMed LaparoS simulator</h3>
+                        <p>Recognized as cutting-edge medical technology, the VirtaMed LaparoS uses Unity's real-time 3D digital twin technology and integrated haptic feedback to provide hyperrealistic surgical training.</p>
                         <a href="#" class="button">VIEW POST</a>
                     </div>
                 </div>
@@ -253,7 +259,7 @@
         <div class="stat-card">
             <div class="stat-number">5</div>
             <div class="stat-label">Open Tickets</div>
-            <div class="stat-trend positive">↑ 2 this week</div>
+            <div class="stat-trend positive">Up 2 this week</div>
         </div>
         <div class="stat-card">
             <div class="stat-number">12</div>
@@ -263,7 +269,7 @@
         <div class="stat-card">
             <div class="stat-number">4h</div>
             <div class="stat-label">Avg Response Time</div>
-            <div class="stat-trend negative">↓ 2h from last week</div>
+            <div class="stat-trend negative">Down 2h from last week</div>
         </div>
     </div>
 
@@ -274,7 +280,7 @@
             <p>Unable to import FBX files larger than 2GB</p>
             <div class="ticket-meta">
                 <span>Ticket #1234</span>
-                <span>Created: Dec 20, 2023</span>
+                <span>Created: Nov 20, 2024</span>
             </div>
             <a href="#" class="button">View Details</a>
         </div>
@@ -284,7 +290,7 @@
             <p>Android build failing after latest SDK update</p>
             <div class="ticket-meta">
                 <span>Ticket #1235</span>
-                <span>Created: Dec 21, 2023</span>
+                <span>Created: Nov 21, 2024</span>
             </div>
             <a href="#" class="button">View Details</a>
         </div>
@@ -294,11 +300,96 @@
             <p>Need additional examples for networking feature</p>
             <div class="ticket-meta">
                 <span>Ticket #1236</span>
-                <span>Created: Dec 22, 2023</span>
+                <span>Created: Nov 22, 2024</span>
             </div>
             <a href="#" class="button">View Details</a>
         </div>
     </div>
 </div>
+<div class="section">
+    <div class="section-header">
+        <div class="section-icon" data-tooltip="ROI: Interactive project showcase increases engagement by 45%. Carousel format improves content discovery and reduces bounce rates by 30%.">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 1v22M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+            </svg>
+        </div>
+        <h2>On Demand Training</h2>
+    </div>
+
+    <!-- Carousel container with adjusted width -->
+    <div class="carousel-container" id="training-carousel">
+        <button class="carousel-button prev" onclick="moveTrainingSlide(-1)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="15 18 9 12 15 6"></polyline>
+            </svg>
+        </button>
+
+        <div class="carousel-track">
+            <div class="carousel-slides">
+                <div class="carousel-slide">
+                    <div class="carousel-card">
+                        <img src="images/visinos-intro.jpg" alt="Introduction to visionOS" class="card-image">
+                        <h3>Introduction to Developing for visionOS with Unity</h3>
+                        <p>Get started with Unity development for Apple Vision Pro. This comprehensive 3-hour course covers fundamental concepts and setup requirements.</p>
+                        <a href="#" class="button">VIEW COURSE</a>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <div class="carousel-card">
+                        <img src="images/xr-hands.jpg" alt="XR Hands Fundamentals" class="card-image">
+                        <h3>XR Hands Fundamentals for visionOS</h3>
+                        <p>Learn essential hand tracking and interaction techniques in this 5-hour course focused on creating intuitive XR experiences.</p>
+                        <a href="#" class="button">VIEW COURSE</a>
+                    </div>
+                </div>
+
+                <div class="carousel-slide">
+                    <div class="carousel-card">
+                        <img src="images/shader-graph.jpg" alt="Shader Graph Development" class="card-image">
+                        <h3>Shader Graph for visionOS Mixed Reality</h3>
+                        <p>Master advanced visual effects and shaders in this 5-hour course designed for creating immersive mixed reality applications.</p>
+                        <a href="#" class="button">VIEW COURSE</a>
+                    </div>
+                </div>
+
+                <!-- Repeat for other slides -->
+            </div>
+        </div>
+
+        <button class="carousel-button next" onclick="moveSlide(1)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="9 18 15 12 9 6"></polyline>
+            </svg>
+        </button>
+    </div>
+
+
+
+    <script>
+        // Separate JavaScript for the training carousel
+        let currentTrainingSlide = 0;
+        const trainingCarousel = document.getElementById('training-carousel');
+        const totalTrainingSlides = trainingCarousel.querySelectorAll('.carousel-slide').length;
+
+        function updateTrainingSlides() {
+            const slides = trainingCarousel.querySelector('.carousel-slides');
+            slides.style.transform = `translateX(-${currentTrainingSlide * (100 / totalTrainingSlides)}%)`;
+        }
+
+        function moveTrainingSlide(direction) {
+            currentTrainingSlide = (currentTrainingSlide + direction + totalTrainingSlides) % totalTrainingSlides;
+            updateTrainingSlides();
+        }
+
+        // Optional: Auto-play for training carousel
+        setInterval(() => moveTrainingSlide(1), 5000);
+    </script>
+</div>
+<iframe
+        src="chatbot.html"
+        frameborder="0"
+        style="position: fixed; bottom: 0; right: 0; border: none; width: 400px; height: 600px; z-index: 9999; background: transparent;"
+></iframe>
 </body>
 </html>
