--- a/WebApplication2/public/index3.html
+++ b/WebApplication2/public/index3.html
@@ -9,7 +9,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
         <h1 class="hero-title">Your Journey at Unity</h1>
-        <p class="hero-subtitle">Overview of Support Services for Unity Industry</p>
+        <p class="hero-subtitle">Overview of Services for Unity Industry</p>
     </div>
 </div>
 
