new look for the submit page

--- a/WebApplication2/public/index2.html
+++ b/WebApplication2/public/index2.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Topic Selection</title>
-    
-
-  
+    <link href="css/stylesprm.css" rel="stylesheet">
 </head>
 <body>
 <div class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
-        <h1 class="hero-title">Create Onboarding Summary Page</h1>
+        <h1 class="hero-title">Create Onboarding Summary Page new</h1>
            <p class="hero-subtitle">Generate a custom onboarding summary page for your clients based on the topics discussed during your meeting.</p>
        
     </div>
